fix: setup